refactor: Sections LinkedList의 메서드를 사용하도록 수정